@@ -1,19 +1,16 @@
 package android.HLMPConnect.FileTransfer;
 
-import java.io.File;
 import java.util.ArrayList;
 import java.util.HashMap;
 import android.app.ListActivity;
 import android.os.Bundle;
 import android.os.Handler;
 import android.os.Message;
-import android.util.Log;
 import android.view.View;
 import android.widget.ProgressBar;
 import android.widget.SimpleAdapter;
 import android.widget.SimpleAdapter.ViewBinder;
 
-import android.HLMPConnect.FilesActivity;
 import android.HLMPConnect.HLMPApplication;
 import android.HLMPConnect.R;
 import android.HLMPConnect.Managers.FilesManager;
@@ -21,34 +18,41 @@ import android.HLMPConnect.Managers.FilesManager;
 
 public class StateFilesActivity extends ListActivity {
 	
-	private static final String MSG_TAG = "HLMP -> StateFilesActivity";
-
 	private static final String ID =	"ID";
 	private static final String FILENAME =	"FILENAME";
 	private static final String SIZE = 		"SIZE";
 	private static final String PROGRESS = 	"PROGRESS";
 
-	public static final int UPDATE_DOWNLOAD_PERCENT	= 0;
-	public static final int UPDATE_UPLOAD_PERCENT	= 1;
-	public static final int ADD_DOWNLOAD			= 2;
+	public static final int ADD_DOWNLOAD			= 0;
+	public static final int ADD_UPLOAD				= 1;
+	public static final int UPDATE_DOWNLOAD_PERCENT	= 2;
+	public static final int UPDATE_UPLOAD_PERCENT	= 3;
+	
 	
 	private ArrayList<HashMap<String, String>> adapterFiles;
 	private HashMap<String,HashMap<String, String>> files;
 	private SimpleAdapter adapter;
 	private FilesManager fileManager;
 
+	// TODO: add clear option
 	
 	private final Handler stateFilesHandler = new Handler() {
         @Override
         public synchronized void handleMessage(Message msg) {
-        	if (msg.what == ADD_DOWNLOAD) {
+        	if (msg.what == ADD_DOWNLOAD || msg.what == ADD_UPLOAD) {
         		String[] file_data = (String[]) msg.obj;
         		String fileHandlerId = file_data[0];
         		String fileName = file_data[1];
+        		if (msg.what == ADD_DOWNLOAD) {
+        			fileName = "(DOWNLOAD) " + fileName;
+        		}
+        		else {
+        			fileName = "(TRANSFER) " + fileName;
+        		}
         		String size = file_data[2];
         		long size_long = 0;
         		if (size != null) {
-        			size_long = new Long(size).longValue();
+        			size_long = Long.valueOf(size).longValue();
         		}
         		size = "" + size_long/1024 + " KB";
         		String progress = "0";
@@ -61,7 +65,7 @@ public class StateFilesActivity extends ListActivity {
 				
 				files.put(fileHandlerId, fileMap);
         	}
-        	else if (msg.what == UPDATE_DOWNLOAD_PERCENT) {
+        	else if (msg.what == UPDATE_DOWNLOAD_PERCENT || msg.what == UPDATE_UPLOAD_PERCENT) {
         		String fileHandlerId = (String) msg.obj;
         		String percent = "" + msg.arg1;
         		files.get(fileHandlerId).put(PROGRESS, percent);
